tests/ui/cve_2021_45688/cve_2021_45688.stderr
error: Use `Vec::set_len` to extend the length of a `Vec`, potentially including uninitialized elements
  --> tests/ui/cve_2021_45688/cve_2021_45688.rs:23:16
   |
LL |         result.set_len(words);
   |                ^^^^^^^^^^^^^^
   |
note: make sure all elements are initialized before using them
  --> tests/ui/cve_2021_45688/cve_2021_45688.rs:23:16
   |
LL |         result.set_len(words);
   |                ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

